db url, route, type, register

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,4 @@
-DB_HOST=localhost
-MONGODB_PORT=27017
-MONGODB_USER=<your_database_user>
-MONGODB_PASS=<your_database_password>
-MONGODB_NAME=nexmedis
-REDIS_HOST=localhost
-REDIS_PORT=6379
+MONGODB_URI=mongodb://<your_database_user>:<your_database_password>@<your_host>:27017/?directConnection=true&authMechanism=SCRAM-SHA-256
+MONGODB_URI_REPLICA_SET=mongodb://<your_database_user>:<your_database_password>@<your_host0>:27017,<your_host1>:27017,<your_host2>:27017/?authSource=admin&replicaSet=rs0&authMechanism=SCRAM-SHA-256
+REDIS_URI=redis://<your_redis_user>:<your_redis_password>@<your_host>:6379
 PORT=3000
