--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
       "@modules/*": ["modules/*"],
       "@services/*": ["services/*"],
       "@utils/*": ["utils/*"],
-      "@controller/*": ["controller/*"],
+      "@controllers/*": ["controllers/*"],
       "@routes/*": ["routes/*"],
       "@type/*": ["types/*"]
     },                                                   /* Specify a set of entries that re-map imports to additional lookup locations. */
