--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ MONGODB_URI=mongodb://<your_database_user>:<your_database_password>@<your_host>:
 MONGODB_URI_REPLICA_SET=mongodb://<your_database_user>:<your_database_password>@<your_host0>:27017,<your_host1>:27017,<your_host2>:27017/?authSource=admin&replicaSet=rs0&authMechanism=SCRAM-SHA-256
 REDIS_URI=redis://<your_redis_user>:<your_redis_password>@<your_host>:6379
 PORT=3000
+SECRET_KEY=<your_secret_key>
