--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "devDependencies": {
     "@types/bun": "^1.3.3",
-    "@types/express": "^5.0.5"
+    "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
@@ -13,6 +14,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "redis": "^5.10.0"
   }
