--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "nexmedis",
-  "module": "index.ts",
-  "type": "module",
+  "author": "VireZee",
   "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc && tsc-alias",
+    "start": "node dist/server.js"
+  },
   "devDependencies": {
     "@types/bun": "^1.3.3",
     "@types/express": "^5.0.5",
-    "@types/jsonwebtoken": "^9.0.10"
+    "@types/jsonwebtoken": "^9.0.10",
+    "tsc-alias": "^1.8.16",
+    "tsx": "^4.20.6"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
