--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "build": "tsc && tsc-alias",
     "start": "node dist/server.js"
   },
-  "devDependencies": {
-    "@types/bun": "^1.3.3",
-    "@types/express": "^5.0.5",
-    "@types/jsonwebtoken": "^9.0.10",
-    "tsc-alias": "^1.8.16",
-    "tsx": "^4.20.6"
-  },
-  "peerDependencies": {
-    "typescript": "^5.9.3"
-  },
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "lru-cache": "^11.2.2",
     "mongoose": "^9.0.0",
-    "redis": "^5.10.0"
+    "redis": "^5.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.3.3",
+    "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
+    "tsc-alias": "^1.8.16",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
